; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-fork.c_assert_run_work.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-fork.c_assert_run_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@work_cb_count = common dso_local global i32 0, align 4
@after_work_cb_count = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"Queue in %d\0A\00", align 1
@work_cb = common dso_local global i32 0, align 4
@after_work_cb = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"Running in %d\0A\00", align 1
@UV_RUN_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @assert_run_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_run_work(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32, i32* @work_cb_count, align 4
  %6 = icmp eq i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load i32, i32* @after_work_cb_count, align 4
  %10 = icmp eq i32 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  %13 = call i32 (...) @getpid()
  %14 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @work_cb, align 4
  %17 = load i32, i32* @after_work_cb, align 4
  %18 = call i32 @uv_queue_work(i32* %15, i32* %3, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp eq i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @ASSERT(i32 %21)
  %23 = call i32 (...) @getpid()
  %24 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  %25 = load i32*, i32** %2, align 8
  %26 = load i32, i32* @UV_RUN_DEFAULT, align 4
  %27 = call i32 @uv_run(i32* %25, i32 %26)
  %28 = load i32, i32* @work_cb_count, align 4
  %29 = icmp eq i32 %28, 1
  %30 = zext i1 %29 to i32
  %31 = call i32 @ASSERT(i32 %30)
  %32 = load i32, i32* @after_work_cb_count, align 4
  %33 = icmp eq i32 %32, 1
  %34 = zext i1 %33 to i32
  %35 = call i32 @ASSERT(i32 %34)
  store i32 0, i32* @work_cb_count, align 4
  store i32 0, i32* @after_work_cb_count, align 4
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @uv_queue_work(i32*, i32*, i32, i32) #1

declare dso_local i32 @uv_run(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
